platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_67.platter
start(){
pass(a = 3; a-=1; a and 0){
}
}